--- a/styles.css
+++ b/styles.css
@@ -115,13 +115,13 @@ button {
   background-color: var(--colour-secondary);
 
   font-family: "Outfit";
-  font-size: 1.25em;
+  font-size: 1em;
 
   width: 12em;
   height: 3em;
 
   border: none;
-  border-radius: 0.5em;
+  border-radius: 17px;
 
   cursor: pointer;
 }
@@ -140,15 +140,15 @@ button:hover {
 }
 
 #switchContainer p {
-  padding: 0em 1em 0em 1em;
+  padding: 0em 1em 0em 0em;
 }
 
 /* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 42px;
+  height: 25px;
 }
 
 /* Hide default HTML checkbox */
@@ -174,8 +174,8 @@ button:hover {
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
+  height: 17px;
+  width: 17px;
   left: 4px;
   bottom: 4px;
   background-color: white;
@@ -192,9 +192,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(17px);
+  -ms-transform: translateX(17px);
+  transform: translateX(17px);
 }
 
 button {
@@ -259,4 +259,10 @@ button.has-spinner::after {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+.sphere path {
+  fill: url(#sphereGradient);
+  stroke-width: 1px;
+  backface-visibility: hidden;
 }
